--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <!-- navbar -->
- <div class="bg-primary pt-8">
-  <div class="container mx-auto p-10 bg-primary " >
-    <h3 class="font-bold text-xl text-secondary">
+ <div class="bg-primary  pt-8  "  >
+  <div class="container mx-auto p-10 bg-primary flex flex-col justify-center items-center md:items-start"  >
+    <h3 class="font-bold text-xl text-secondary pt-4 pb-2">
       Construction Services
     </h3>
-    <hr class="w-14 font-extrabold bg-secondary opacity-50 h-1 text-secondary" size="10">
-    <h1 class="text-4xl font-bold text-secondary">Building Your Dreams</h1>
-    <button>GET A QUOTE</button>
+    <hr class="w-24 font-extrabold bg-secondary opacity-50 h-1 mt-4 text-secondary" size="10">
+    <h1 class="pt-8 w-[55%] text-8xl text-wrap leading-tight h-auto font-extrabold text-secondary text-center md:text-left">Building Your Dreams</h1>
+    <button class="w-52 h-14 mt-8 font-bold text-lg bg-accent text-secondary">GET A QUOTE</button>
+   
    </div>
  </div>
  
