--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 @layer base {
-    html {
-        font-family: "Roboto Mono", monospace;
-  font-weight: 100;
-  font-style: normal;
-    }
+  html {
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
+}
