--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,32 @@
 #main {
-  background-image: url("../../assets/images/main-back.jpg");
+  // background-image: url("../../assets/images/main-back.jpg");
 
+  // background-color: #0e3998;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-attachment: fixed;
+  // background-blend-mode: luminosity;
+  background: linear-gradient(
+    to top,
+    rgba(14, 57, 152,0),
+    rgba(14, 57, 152,90)
+  ),linear-gradient(
+    to top,
+    rgba(14, 57, 152,90),
+    rgba(14, 57, 152,0)
+  ),url("../../assets/images/main-back.jpg");
   background-color: #0e3998;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-blend-mode: luminosity;
+ 
+  
+}
+#underLine{
+  position: relative;
+  top: -5%;
+
+  background-color: #e5e5f7;
+opacity: 0.8;
+background: repeating-linear-gradient( 145deg, #554b4e9d, #554b4e9c 2px, #F3F1F6 2px, #F3F1F6 8px );
 }
