--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,85 +1,284 @@
 <!-- navbar -->
-<div class="w-full h-screen min-h-[1024px]" id="main">
-  <nav class=" h-28 flex container mx-auto justify-between items-center px-10">
-    <img src="../../assets/images/main-logo.png" class=" border-secondary w-28 hover:scale-110 duration-75 ease-in-out cursor-pointer"/>
+<div class="w-[100%] h-screen min-h-[1024px]" id="main">
+  <nav
+    class="h-28 md:flex container mx-auto pt-10 justify-between items-center px-10 hidden"
+  >
+    <img
+      src="../../assets/images/main-logo.png"
+      class="border-secondary w-28 hover:scale-110 duration-75 ease-in-out cursor-pointer"
+    />
     <ul class="flex">
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-accent">Home</a>
+        <a href="" class="font-bold text-lg text-accent">Home</a>
       </li>
 
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-secondary hover:text-accent">Service</a>
+        <a href="" class="font-bold text-lg text-secondary hover:text-accent"
+          >Service</a
+        >
       </li>
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-secondary hover:text-accent">About</a>
+        <a href="" class="font-bold text-lg text-secondary hover:text-accent"
+          >About</a
+        >
       </li>
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-secondary hover:text-accent">Projects</a>
+        <a href="" class="font-bold text-lg text-secondary hover:text-accent"
+          >Projects</a
+        >
       </li>
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-secondary hover:text-accent">Contact</a>
+        <a href="" class="font-bold text-lg text-secondary hover:text-accent"
+          >Contact</a
+        >
       </li>
       <li class="mx-6">
-        <a href="" class="font-bold text-lg  text-secondary">9421338871</a>
+        <a href="" class="font-bold text-lg text-secondary">9421338871</a>
       </li>
     </ul>
   </nav>
-  <div
-    class="container  flex flex-row flex-wrap mx-auto mt-20"
-  ><div
-  class="container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
->
-  <h3 class="font-bold text-xl text-secondary pt-4 pb-2">
-    Construction Services
-  </h3>
-  <hr
-    class="w-24 font-extrabold bg-secondary opacity-50 h-1 mt-4 text-secondary"
-    size="10"
-  />
-  <h1
-    class="pt-8 w-[55%] text-7xl text-wrap leading-tight h-auto font-extrabold text-secondary text-center md:text-left"
-  >
-    Building Your Dreams
-  </h1>
-  <button class="w-52 h-14 mt-8 font-semibold text-lg bg-accent text-secondary">
-    GET A QUOTE
-  </button>
-</div>
-<div
-    class="container bg-[#ffffff] flex flex-row flex-wrap mx-10 my-32 shadow-lg  "
-  >
-  <div class="bg-accent w-1/3 h-[500px] px-10 py-14 ">
-    <h1 class="text-secondary text-3xl font-extrabold ">Professional and Reliable Services.</h1>
-    <hr class="bg-secondary h-1 w-20 text-secondary my-8" >
-    <div class="flex flex-row h-8 justify-between w-2/3">
-      <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0e3998" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0e3998" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0e3998" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0e3998" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#0e3998" d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
+  <div class="container flex-1 flex-col flex-wrap mx-auto mt-20">
+    <div
+      class="container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
+    >
+      <h3 class="font-bold text-xl text-secondary pt-4 pb-2">
+        Construction Services
+      </h3>
+      <hr
+        class="w-24 font-extrabold bg-secondary opacity-50 h-1 mt-4 text-secondary"
+        size="10"
+      />
+      <h1
+        class="pt-8 w-[40%] text-7xl text-wrap leading-tight h-auto font-extrabold text-secondary text-center md:text-left"
+      >
+        Building Your Dreams
+      </h1>
+      <button
+        class="w-52 h-14 mt-8 font-semibold text-lg bg-accent text-secondary"
+      >
+        GET A QUOTE
+      </button>
+    </div>
+    <div
+      class="container bg-[#ffffff] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto my-32 shadow-lg"
+    >
+      <div class="bg-accent w-full h-[570px] px-10 py-14">
+        <h1 class="text-secondary text-3xl font-extrabold">
+          Professional and Reliable Services.
+        </h1>
+        <hr class="bg-secondary h-1 w-20 text-secondary my-8" />
+        <div class="flex flex-row h-8 justify-between w-2/3">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              fill="#0e3998"
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              fill="#0e3998"
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              fill="#0e3998"
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              fill="#0e3998"
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              fill="#0e3998"
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+        </div>
+      </div>
+
+      <div
+        class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+        style="z-index: 0"
+      >
+        <img
+          ngSrc="../../assets/images/general-construction.jpg"
+          width="400"
+          height="200"
+          alt=""
+          class="mx-auto mt-8 w-full"
+        />
+        <h1
+          class="text-2xl font-extrabold text-primary my-2"
+          style="z-index: 0"
+        >
+          General Contract
+        </h1>
+        <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+          repudiandae, eveniet repellat autem, optio natus
+        </p>
+        <svg
+          style="width: 20px; margin-top: 20px"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
+          />
+        </svg>
+      </div>
+
+      <div
+        class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
+        style="z-index: 0"
+      >
+        <img
+          ngSrc="../../assets/images/project-planning.jpg"
+          width="400"
+          height="200"
+          alt=""
+          class="mx-auto mt-8 w-full"
+        />
+        <h1
+          class="text-2xl font-extrabold text-primary my-2"
+          style="z-index: 0"
+        >
+          Project Planning
+        </h1>
+        <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+          repudiandae, eveniet repellat autem, optio natus
+        </p>
+        <svg
+          style="width: 20px; margin-top: 20px"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
+          />
+        </svg>
+      </div>
+
+      <div
+        class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+        style="z-index: 0"
+      >
+        <img
+          ngSrc="../../assets/images/house-refurbishment.jpg"
+          width="400"
+          height="200"
+          alt=""
+          class="mx-auto mt-8 w-full"
+        />
+        <h1
+          class="text-2xl font-extrabold text-primary my-2"
+          style="z-index: 0"
+        >
+          House Refurbishment
+        </h1>
+        <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+          repudiandae, eveniet repellat autem, optio natus
+        </p>
+        <svg
+          style="width: 20px; margin-top: 20px"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
+          />
+        </svg>
+      </div>
+      <div
+        class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+        style="z-index: 0"
+      >
+        <img
+          ngSrc="../../assets/images/kichen-remodeling.jpg"
+          width="400"
+          height="200"
+          alt=""
+          class="mx-auto mt-8 w-full"
+        />
+        <h1
+          class="text-2xl font-extrabold text-primary my-2"
+          style="z-index: 0"
+        >
+          Kitchen Remodeling
+        </h1>
+        <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+          repudiandae, eveniet repellat autem, optio natus
+        </p>
+        <svg
+          style="width: 20px; margin-top: 20px"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
+          />
+        </svg>
+      </div>
+      <div
+        class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
+        style="z-index: 0"
+      >
+        <img
+          ngSrc="../../assets/images/house-extension.jpg"
+          width="400"
+          height="200"
+          alt=""
+          class="mx-auto mt-8 w-full"
+        />
+        <h1
+          class="text-2xl font-extrabold text-primary my-2"
+          style="z-index: 0"
+        >
+          House Extensions
+        </h1>
+        <div id="underLine" class="w-[100%] h-[25px]" style="z-index: -1"></div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+          repudiandae, eveniet repellat autem, optio natus
+        </p>
+        <svg
+          style="width: 20px; margin-top: 20px"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+          <path
+            fill="#0e3998"
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
+          />
+        </svg>
+      </div>
     </div>
   </div>
-  <div class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-1/3 h-[500px] p-8 border-b-2 border-r-2 border-[#bbbbbb50]">
-    <img ngSrc="../../assets/images/general-construction.jpg" width="400" height="200" alt="" class=" mx-auto mt-8 ">
-    <h1 class="text-2xl font-extrabold text-primary my-2 z-20 ">General Contract
-    </h1>
-    <div id="underLine" class=" w-[100%] h-[25px] z-0"></div>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum repudiandae, eveniet repellat autem, optio natus </p>
-
-
-
-  </div><div class="bg-secondary duration-[700ms] hover:bg-[#e3e3e4ce] w-1/3 h-[500px] border-b-2 border-[#bbbbbb50]">
-    3
-  </div><div class="bg-secondary duration-[700ms] hover:bg-[#e3e3e4ce] w-1/3 h-[500px]">
-    4
-  </div><div class="bg-secondary duration-[700ms] hover:bg-[#e3e3e4ce] w-1/3 h-[500px] border-r-2 border-l-2 border-[#bbbbbb50]">
-    5
-  </div><div class="bg-secondary duration-[700ms] hover:bg-[#e3e3e4ce] w-1/3 h-[500px]">
-    6
-  </div>
-</div>
-</div>
-
 </div>
 <div class="bg-secondary h-screen"></div>
-
