--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,26 +7,28 @@
   // background-attachment: fixed;
   // background-blend-mode: luminosity;
   background: linear-gradient(
-    to top,
-    rgba(14, 57, 152,0),
-    rgba(14, 57, 152,90)
-  ),linear-gradient(
-    to top,
-    rgba(14, 57, 152,90),
-    rgba(14, 57, 152,0)
-  ),url("../../assets/images/main-back.jpg");
+      to top,
+      rgba(14, 57, 152, 0),
+      rgba(14, 57, 152, 90)
+    ),
+    linear-gradient(to top, rgba(14, 57, 152, 90), rgba(14, 57, 152, 0)),
+    url("../../assets/images/main-back.jpg");
   background-color: #0e3998;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
- 
-  
 }
-#underLine{
+#underLine {
   position: relative;
   top: -5%;
 
   background-color: #e5e5f7;
-opacity: 0.8;
-background: repeating-linear-gradient( 145deg, #554b4e9d, #554b4e9c 2px, #F3F1F6 2px, #F3F1F6 8px );
+  opacity: 0.8;
+  background: repeating-linear-gradient(
+    145deg,
+    #625c5e50,
+    #625c5e50 2px,
+    #f3f1f6 2px,
+    #f3f1f6 8px
+  );
 }
