--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       size="10"
     />
     <h1
-      class="pt-8 w-[100%] text-5xl md:text-7xl text-wrap leading-tight h-auto font-extrabold text-secondary text-center md:text-left"
+      class="pt-8 w-[100%] md:w-[45%] text-5xl md:text-7xl text-wrap leading-tight h-auto font-extrabold text-secondary text-center md:text-left"
     >
       Building Your Dreams
     </h1>
@@ -23,9 +23,9 @@
     </button>
   </div>
   <div
-    class="container bg-[#ffffff] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto my-32 shadow-lg"
+    class="container bg-[#ffffff] grid grid-cols-1 gap-5 md:gap-0 md:grid-cols-2 lg:grid-cols-3 mx-auto my-32 md:shadow-lg"
   >
-    <div class="bg-accent w-full h-[570px] px-10 py-14">
+    <div class="bg-accent w-full min-h-[570px] px-10 py-14 shadow-lg">
       <h1 class="text-secondary text-3xl font-extrabold">
         Professional and Reliable Services.
       </h1>
@@ -70,7 +70,7 @@
     </div>
 
     <div
-      class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+      class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
       style="z-index: 0"
     >
       <img
@@ -89,7 +89,7 @@
         repudiandae, eveniet repellat autem, optio natus
       </p>
       <svg
-        style="width: 20px; margin-top: 20px"
+        style="width: 20px; margin-top: 20px; margin-bottom: 20px"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 448 512"
       >
@@ -102,7 +102,7 @@
     </div>
 
     <div
-      class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
+      class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
       style="z-index: 0"
     >
       <img
@@ -121,7 +121,7 @@
         repudiandae, eveniet repellat autem, optio natus
       </p>
       <svg
-        style="width: 20px; margin-top: 20px"
+        style="width: 20px; margin-top: 20px; margin-bottom: 20px"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 448 512"
       >
@@ -134,7 +134,7 @@
     </div>
 
     <div
-      class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+      class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
       style="z-index: 0"
     >
       <img
@@ -153,7 +153,7 @@
         repudiandae, eveniet repellat autem, optio natus
       </p>
       <svg
-        style="width: 20px; margin-top: 20px"
+        style="width: 20px; margin-top: 20px; margin-bottom: 20px"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 448 512"
       >
@@ -165,7 +165,7 @@
       </svg>
     </div>
     <div
-      class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
+      class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-r-2 border-[#bbbbbb50]"
       style="z-index: 0"
     >
       <img
@@ -184,7 +184,7 @@
         repudiandae, eveniet repellat autem, optio natus
       </p>
       <svg
-        style="width: 20px; margin-top: 20px"
+        style="width: 20px; margin-top: 20px; margin-bottom: 20px"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 448 512"
       >
@@ -196,7 +196,7 @@
       </svg>
     </div>
     <div
-      class="bg-secondary hover:bg-[#e3e3e4ce] duration-[700ms] w-full h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
+      class="bg-secondary shadow-lg hover:bg-[#e3e3e4ce] duration-[700ms] w-full min-h-[570px] p-10 border-b-2 border-[#bbbbbb50]"
       style="z-index: 0"
     >
       <img
@@ -215,7 +215,7 @@
         repudiandae, eveniet repellat autem, optio natus
       </p>
       <svg
-        style="width: 20px; margin-top: 20px"
+        style="width: 20px; margin-top: 20px; margin-bottom: 20px"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 448 512"
       >
@@ -229,4 +229,39 @@
   </div>
 </div>
 
-<div class="bg-secondary h-screen"></div>
+<div class="w-full h-full flex">
+  <div class="w-1/2 h-full" id="img1">1</div>
+
+  <div class="w-1/2 h-full" id="img2">1</div>
+</div>
+<div
+  class="container h-screen w-2/3 mx-auto px-10 flex flex-col justify-start items-center mt-30"
+>
+  <h1 class="text-primary text-7xl font-extrabold">About</h1>
+  <hr
+    class="w-28 font-extrabold bg-accent opacity-50 h-2 my-10 text-accent"
+    size="10"
+  />
+  <p class="text-3xl font-extrabold text-primary mb-8">
+    No Job Is to Big for Us. We'll Get It Done.
+  </p>
+  <p class="text-xl font-bold text-mygray leading-loose text-center mb-5">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+    non proiden. sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam,
+  </p>
+  <p class="text-xl font-bold text-mygray leading-loose text-center">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  </p>
+  <button
+    class="underline border-0 text-myblack font-bold text-2xl mt-12 hover:text-mygray underline-offset-2"
+  >
+    READ MORE
+  </button>
+</div>
