--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-screen min-h-[1024px] px-10" id="main">
+<div class="w-screen h-screen min-h-[1024px]" id="main">
   <app-navbar></app-navbar>
   <app-home></app-home>
 </div>
