--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-28 md:hidden container mx-auto flex justify-between scroll-py-10 items-center md:px-10 w-full"
+  class="h-28 md:hidden container mx-auto flex justify-between scroll-py-10 items-center md:px-10 w-full px-7"
 >
   <img
     src="../../assets/images/main-logo.png"
