--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- navbar -->
 
-<div class="container flex-1 flex-col flex-wrap mx-auto mt-20">
+<div class="container flex-1 flex-col flex-wrap mx-auto mt-20 px-7 md:px-0">
   <div
     class="container mx-auto p-10 flex flex-col justify-center items-center md:items-start"
   >
@@ -229,39 +229,214 @@
   </div>
 </div>
 
-<div class="w-full h-full flex">
-  <div class="w-1/2 h-full" id="img1">1</div>
-
-  <div class="w-1/2 h-full" id="img2">1</div>
-</div>
-<div
-  class="container h-screen w-2/3 mx-auto px-10 flex flex-col justify-start items-center mt-30"
+<section class="w-full h-full flex">
+  <div class="w-1/2 h-1/4 lg:h-full" id="img1"></div>
+  <div
+    class="container h-screen w-4/5 lg:w-1/2 mx-auto left-0 right-0 mr-auto ml-auto flex flex-col justify-start items-center mt-30 py-16 absolute"
+  >
+    <h1 class="text-primary text-4xl md:text-7xl font-extrabold text-center">
+      About
+    </h1>
+    <hr
+      class="w-28 font-extrabold bg-accent opacity-50 h-2 my-10 text-accent"
+      size="10"
+    />
+    <p class="text-xl md:text-3xl font-extrabold text-primary mb-8 text-center">
+      No Job Is to Big for Us. We'll Get It Done.
+    </p>
+    <p
+      class="text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
+    >
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proiden. sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam,
+    </p>
+    <p
+      class="text-xs font-semibold md:text-lg lg:text-xl md:font-bold text-mygray leading-loose text-center mb-5"
+    >
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo
+    </p>
+    <button
+      class="underline border-0 text-myblack font-bold text-lg md:text-2xl mt-4 md:mt-12 hover:text-mygray underline-offset-2"
+    >
+      READ MORE
+    </button>
+  </div>
+  <div class="w-1/2 h-1/4 lg:h-full" id="img2"></div>
+</section>
+<section
+  class="container mx-auto flex flex-col text-center justify-center items-center relative top-[-20%]"
 >
-  <h1 class="text-primary text-7xl font-extrabold">About</h1>
+  <h1
+    class="text-2xl md:text-6xl font-extrabold text-primary text-center my-10"
+  >
+    Our Happy Clients!
+  </h1>
+  <hr class="bg-mygray text-mygray h-1 w-1/6 md:w-1/12 opacity-30" />
+  <div class="my-10 flex flex-row flex-wrap">
+    <div
+      class="w-[300px] md:w-[350px] px-10 py-10 my-10 mx-auto md:mx-5 shadow-2xl flex flex-col justify-start text-left"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 448 512"
+        style="width: 60px"
+      >
+        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#0e3998"
+          d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
+        />
+      </svg>
+      <p class="text-mygray font-normal mt-4">
+        Elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Nam
+        varius consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing
+        elelit tellus.
+      </p>
+      <img src="../../assets/images/rating.png" alt="" style="width: 100px" />
+      <div class="flex justify-start items-center">
+        <img src="../../assets/images/profile.jpg" alt="" class="w-[80px]" />
+        <h2 class="text-primary text-lg font-bold ml-4">Jemma Stone</h2>
+      </div>
+    </div>
+    <div
+      class="w-[300px] md:w-[350px] px-10 py-10 my-10 mx-auto md:mx-5 shadow-2xl flex flex-col justify-start text-left"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 448 512"
+        style="width: 60px"
+      >
+        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#0e3998"
+          d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
+        />
+      </svg>
+      <p class="text-mygray font-normal mt-4">
+        Elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Nam
+        varius consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing
+        elelit tellus.
+      </p>
+      <img src="../../assets/images/rating.png" alt="" style="width: 100px" />
+      <div class="flex justify-start items-center">
+        <img src="../../assets/images/profile.jpg" alt="" class="w-[80px]" />
+        <h2 class="text-primary text-lg font-bold ml-4">Jemma Stone</h2>
+      </div>
+    </div>
+    <div
+      class="w-[300px] md:w-[350px] px-10 py-10 my-10 mx-auto md:mx-5 shadow-2xl flex flex-col justify-start text-left"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 448 512"
+        style="width: 60px"
+      >
+        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#0e3998"
+          d="M0 216C0 149.7 53.7 96 120 96l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72zm256 0c0-66.3 53.7-120 120-120l8 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-8 0c-30.9 0-56 25.1-56 56l0 8 64 0c35.3 0 64 28.7 64 64l0 64c0 35.3-28.7 64-64 64l-64 0c-35.3 0-64-28.7-64-64l0-32 0-32 0-72z"
+        />
+      </svg>
+      <p class="text-mygray font-normal mt-4">
+        Elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Nam
+        varius consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing
+        elelit tellus.
+      </p>
+      <img src="../../assets/images/rating.png" alt="" style="width: 100px" />
+      <div class="flex justify-start items-center">
+        <img src="../../assets/images/profile.jpg" alt="" class="w-[80px]" />
+        <h2 class="text-primary text-lg font-bold ml-4">Jemma Stone</h2>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section
+  class="container mx-auto text-center flex flex-col items-center justify-between mb-20 relative bottom-[15%] md:bottom-[15%] z-10"
+>
+  <h1 class="text-3xl md:text-6xl font-extrabold text-primary mb-4">
+    Why Us ?
+  </h1>
   <hr
-    class="w-28 font-extrabold bg-accent opacity-50 h-2 my-10 text-accent"
+    class="w-12 md:w-24 font-extrabold bg-accent h-[4px] md:h-[6px] mt-4 mb-10 text-accent"
     size="10"
   />
-  <p class="text-3xl font-extrabold text-primary mb-8">
-    No Job Is to Big for Us. We'll Get It Done.
-  </p>
-  <p class="text-xl font-bold text-mygray leading-loose text-center mb-5">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proiden. sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam,
-  </p>
-  <p class="text-xl font-bold text-mygray leading-loose text-center">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  </p>
-  <button
-    class="underline border-0 text-myblack font-bold text-2xl mt-12 hover:text-mygray underline-offset-2"
+  <img
+    src="../../assets/images/whyus.jpg"
+    alt=""
+    class="w-[300px] h-[100px] md:w-[1000px] md:h-[350px] object-cover"
+  />
+</section>
+
+<section
+  class="bg-primary w-full relative top-[-30%] md:top-[-40%] z-0 pt-[30%] md:pt-[40%] lg:pt-[20%] pb-20"
+>
+  <section
+    class="container mx-auto flex gap-8 items-center justify-center flex-wrap"
   >
-    READ MORE
-  </button>
-</div>
+    <div
+      class="w-[400px] p-4 flex flex-col items-center justify-center text-center mb-7"
+    >
+      <div
+        style="
+          background-image: url(../../assets/images/icons/medal-solid-icon.svg);
+        "
+        class="rounded-full h-16 w-16 md:h-24 md:w-24 bg-secondary p-5 object-contain bg-no-repeat bg-center bg-[length:40px_40px]"
+      ></div>
+      <h1 class="text-secondary font-extrabold text-xl md:text-2xl my-6">
+        20+ Years Experience
+      </h1>
+      <p class="text-sm md:text-lg text-secondary opacity-50">
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur.
+      </p>
+    </div>
+    <div
+      class="w-[400px] p-4 flex flex-col items-center justify-center text-center mb-7"
+    >
+      <div
+        style="
+          background-image: url(../../assets/images/icons/user-tie-solid-icon.svg);
+        "
+        class="rounded-full h-16 w-16 md:h-24 md:w-24 bg-secondary p-5 object-contain bg-no-repeat bg-center bg-[length:40px_40px]"
+      ></div>
+      <h1 class="text-secondary font-extrabold text-xl md:text-2xl my-6">
+        Professional Services
+      </h1>
+      <p class="text-sm md:text-lg text-secondary opacity-50">
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur.
+      </p>
+    </div>
+    <div
+      class="w-[400px] p-4 flex flex-col items-center justify-center text-center mb-7"
+    >
+      <div
+        style="
+          background-image: url(../../assets/images/icons/building-solid-icons.svg);
+        "
+        class="rounded-full h-16 w-16 md:h-24 md:w-24 bg-secondary p-5 object-contain bg-no-repeat bg-center bg-[length:40px_40px]"
+      ></div>
+
+      <h1 class="text-secondary font-extrabold text-xl md:text-2xl my-6">
+        100+ Completed Projects
+      </h1>
+      <p class="text-sm md:text-lg text-secondary opacity-50">
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur.
+      </p>
+    </div>
+  </section>
+  <hr
+    class="container mx-auto font-extrabold bg-secondary opacity-40 w-[60%] mt-4 md:mt-10 text-secondary"
+    size="10"
+  />
+</section>
