--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,13 +23,27 @@
   top: -5%;
 
   background-color: #e5e5f7;
-  opacity: 0.8;
+  opacity: 1;
   background: repeating-linear-gradient(
     145deg,
     #625c5e50,
     #625c5e50 2px,
     #f3f1f6 2px,
     #f3f1f6 8px
+  );
+}
+#underLine1 {
+  position: relative;
+  top: -7%;
+  z-index: 0;
+  background-color: transparent;
+  opacity: 0.5;
+  background: repeating-linear-gradient(
+    145deg,
+    #625c5e,
+    #625c5e 2px,
+    #f3f1f600 2px,
+    #f3f1f600 8px
   );
 }
 #img1 {
@@ -54,4 +68,34 @@
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 50px 0px 50px 50px white inset;
+}
+#img3 {
+  background: linear-gradient(to bottom, #0e3998 10%, rgba(255, 255, 255, 0)),
+    linear-gradient(to top, #0e3998 10%, rgba(255, 255, 255, 0)),
+    url("../../assets/images/main-back2.jpg");
+  background-repeat: no-repeat;
+
+  background-size: cover;
+  box-shadow: -50px 0 50px 50px #0e3998 inset;
+}
+/* width */
+#scroller::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+#scroller::-webkit-scrollbar-track {
+  background: #88888831;
+  border-radius: 5px;
+}
+
+/* Handle */
+#scroller::-webkit-scrollbar-thumb {
+  background: #00000040;
+  border-radius: 7px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #55555500;
 }
