--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <div
-  class="h-28 md:hidden container mx-auto flex justify-between scroll-py-10 items-center md:px-10 w-full px-7"
+  class="h-28 md:hidden container mx-auto flex justify-between scroll-py-10 items-center md:px-10 w-full"
 >
   <img
     src="../../assets/images/main-logo.png"
-    class="border-secondary w-16 hover:scale-110 duration-75 ease-in-out cursor-pointer"
+    class="border-secondary w-16 hover:scale-110 duration-75 ease-in-out cursor-pointer ml-7"
   />
 
   <div
-    class="w-6 hidden"
+    class="w-6 hidden mr-7"
     [style.display]="navClicked ? 'block' : 'none'"
     (click)="navIconChange()"
   >
@@ -21,7 +21,7 @@
   </div>
 
   <div
-    class="w-6 hidden"
+    class="w-6 hidden mr-7"
     [style.display]="navClicked ? 'none' : 'block'"
     (click)="navIconChange()"
   >
@@ -33,6 +33,17 @@
       />
     </svg>
   </div>
+  @if (!navClicked) {
+  <div
+    class="absolute top-[10%] right-0 mr-3 h-1/3 bg-[#ffffffe3] rounded-md p-5 flex flex-col justify-around font-bold text-xl"
+  >
+    <a href="" class="hover:text-accent">Home </a>
+    <a href="" class="hover:text-accent">Service </a>
+    <a href="" class="hover:text-accent">About </a>
+    <a href="" class="hover:text-accent">Projects </a>
+    <a href="" class="hover:text-accent">Contacts </a>
+  </div>
+  }
 </div>
 <nav
   class="h-28 md:flex container mx-auto justify-between items-center px-10 hidden"
@@ -48,6 +59,7 @@
 
     <li class="mr-3 lg:mr-6">
       <a
+        routerLink="/services"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Service</a
@@ -55,6 +67,7 @@
     </li>
     <li class="mr-3 lg:mr-6">
       <a
+        routerLink="/about"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >About</a
@@ -62,6 +75,7 @@
     </li>
     <li class="mr-3 lg:mr-6">
       <a
+        routerLink="/projects"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Project</a
@@ -69,6 +83,7 @@
     </li>
     <li class="mr-3 lg:mr-6">
       <a
+        routerLink="/contact"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Contact</a
@@ -83,3 +98,4 @@
     </li>
   </ul>
 </nav>
+<router-outlet></router-outlet>
