--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,31 @@
   background-size: cover;
   background-attachment: fixed;
 }
+
+#main1 {
+  // background-image: url("../../assets/images/main-back.jpg");
+
+  // background-color: #0e3998;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-attachment: fixed;
+  // background-blend-mode: luminosity;
+  background: linear-gradient(
+      to top,
+      rgba(14, 57, 152, 0),
+      rgba(14, 57, 152, 90)
+    ),
+    linear-gradient(to top, rgba(14, 57, 152, 90), rgba(14, 57, 152, 0)),
+    url("../assets/images/main-back.jpg");
+  background-color: #0e3998;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+
+
+
 #underLine {
   position: relative;
   top: -5%;
