--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -56,8 +56,8 @@
     <li class="mr-3 lg:mr-6">
       <a
         href=""
-        routerLink="/"
-        [routerLinkActive]="['active']"
+        routerLink="/home"
+        [routerLinkActive]="['isActive']"
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Home</a
       >
@@ -66,8 +66,8 @@
     <li class="mr-3 lg:mr-6">
       <a
         routerLink="/services"
-        [routerLinkActive]="['active']"
         href=""
+        [routerLinkActive]="['isActive']"
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Service</a
       >
@@ -75,7 +75,7 @@
     <li class="mr-3 lg:mr-6">
       <a
         routerLink="/about"
-        [routerLinkActive]="['active']"
+        [routerLinkActive]="['isActive']"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >About</a
@@ -84,7 +84,7 @@
     <li class="mr-3 lg:mr-6">
       <a
         routerLink="/projects"
-        [routerLinkActive]="['active']"
+        [routerLinkActive]="['isActive']"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Project</a
@@ -93,7 +93,7 @@
     <li class="mr-3 lg:mr-6">
       <a
         routerLink="/contact"
-        [routerLinkActive]="['active']"
+        [routerLinkActive]="['isActive']"
         href=""
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >Contact</a
@@ -102,6 +102,7 @@
     <li class="mr-3 lg:mr-6">
       <a
         href=""
+        [routerLinkActive]="['isActive']"
         class="font-bold text-base lg:text-lg text-secondary hover:text-accent"
         >9421338871</a
       >
