--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,126 @@
-<p>projects works!</p>
+<!-- landing Project page -->
+<section
+  class="w-screen px-10 md:px-40 h-screen flex flex-col justify-center items-start"
+  id="main1"
+>
+  <hr class="bg-secondary text-secondary h-2 w-[80px] opacity-40" />
+  <h1
+    class="text-5xl sm:text-5xl md:text-7xl lg:text-8xl text-secondary font-extrabold my-10"
+  >
+    Projects
+  </h1>
+</section>
+
+<!-- our Work -->
+<section class="w-full py-28 bg-[white]">
+  <div class="flex flex-col md:flex-row container w-[80%] mx-auto gap-5">
+    <div class="w-[100%] md:w-[50%]">
+      <h1 class="text-5xl font-extrabold text-primary">Our Work</h1>
+      <hr class="bg-accent h-2 w-20 text-accent my-5 ml-2" />
+      <img
+        class="h-[85%] w-[100%]"
+        src="../../assets/images/gallary/project2.jpg"
+        alt=""
+      />
+    </div>
+    <div class="w-[100%] md:w-[45%]">
+      <img src="../../assets/images/gallary/project6.jpg" alt="" class="mb-4" />
+      <img src="../../assets/images/gallary/project5.jpg" alt="" />
+      <div class="p-4">
+        <h1 class="text-primary text-2xl font-extrabold">
+          Iculis posuere proident vero quaerat exercitation!
+        </h1>
+        <p class="text-[#808080d3] text-base my-3">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+          tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Corporis
+          suscipit gravida quisquam ultrices omnis et dolorem.
+        </p>
+        <button
+          class="w-36 h-10 md:w-48 md:h-12 mt-8 mb-16 font-semibold text-sm md:text-lg bg-accent text-secondary"
+        >
+          GET A QUOTE
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- image scroller -->
+<section class="bg-accent w-full h-1/4 flex justify-center items-center">
+  <div
+    class="w-2/3 md:w-2/3 flex h-[50%] md:h-[90%] my-auto container mx-auto overflow-scroll"
+    id="scroller"
+  >
+    <img src="../../assets/images/scroll images/logo-01-free-img.png" alt="" />
+    <img src="../../assets/images/scroll images/logo-02-free-img.png" alt="" />
+    <img src="../../assets/images/scroll images/logo-03-free-img.png" alt="" />
+    <img src="../../assets/images/scroll images/logo-04-free-img.png" alt="" />
+    <img src="../../assets/images/scroll images/logo-05-free-img.png" alt="" />
+    <img src="../../assets/images/scroll images/logo-06-free-img.png" alt="" />
+  </div>
+</section>
+
+<!-- our on going projects -->
+<section
+  class="w-full h-[80%] gap-5 bg-[white] flex flex-row justify-center items-center"
+>
+  <div class="w-[25%] flex flex-col justify-center items-start">
+    <h1 class="text-7xl font-extrabold text-primary w-[25%] leading-snug">
+      Our Ongoing Projects
+    </h1>
+    <hr
+      class="w-12 md:w-24 font-extrabold bg-accent h-2 mt-6 text-accent"
+      size="10"
+    />
+  </div>
+  <div class="w-[25%] flex flex-col justify-center items-start">
+    <img src="../../assets/images/ongoing1.jpg" alt="" />
+    <h1 class="text-2xl font-extrabold text-primary mt-3">Neque aliquet</h1>
+    <p class="text-[#808080b7] font-semibold text-base my-3">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
+      luctus nec ullamcorper mattis, pulvinar dapibus leo.
+    </p>
+    <div class="flex justify-center items-center gap-1">
+      <svg
+        class="w-5 h-5"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512"
+      >
+        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#0e3998"
+          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm11.3-395.3l112 112c4.6 4.6 5.9 11.5 3.5 17.4s-8.3 9.9-14.8 9.9l-64 0 0 96c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-96-64 0c-6.5 0-12.3-3.9-14.8-9.9s-1.1-12.9 3.5-17.4l112-112c6.2-6.2 16.4-6.2 22.6 0z"
+        />
+      </svg>
+      <span class="text-lg text-primary font-semibold">Know More</span>
+    </div>
+  </div>
+  <div class="w-[25%] flex flex-col justify-center items-start">
+    <img src="../../assets/images/kitchen.jpg" alt="" />
+    <h1 class="text-2xl font-extrabold text-primary mt-3">
+      Vestibulum eveniet
+    </h1>
+    <p class="text-[#808080b7] font-semibold text-base my-3">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
+      luctus nec ullamcorper mattis, pulvinar dapibus leo.
+    </p>
+    <div class="flex justify-center items-center gap-1">
+      <svg
+        class="w-5 h-5"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512"
+      >
+        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#0e3998"
+          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm11.3-395.3l112 112c4.6 4.6 5.9 11.5 3.5 17.4s-8.3 9.9-14.8 9.9l-64 0 0 96c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-96-64 0c-6.5 0-12.3-3.9-14.8-9.9s-1.1-12.9 3.5-17.4l112-112c6.2-6.2 16.4-6.2 22.6 0z"
+        />
+      </svg>
+      <span class="text-lg text-primary font-semibold">Know More</span>
+    </div>
+  </div>
+</section>
+<!-- FOOTER -->
 <footer class="w-full bg-primary">
   <section class="w-full bg-[#071C4A] h-[1240px] lg:h-[640px] top-[-420px]">
     <section
