--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -25,8 +25,9 @@
       recusandae mollitia assumenda, vel impedit ea magni fugit aut ab.
     </p>
   </div>
+
   <div class="w-[70%] md:w-[30%]">
-    <form action="" class="bg-secondary p-10">
+    <form class="bg-secondary p-10" (submit)="sendEmail($event)">
       <div class="flex flex-row gap-7">
         <div class="flex flex-col w-[45%] md:w-1/2">
           <div class="flex items-center">
@@ -37,6 +38,8 @@
 
           <input
             type="text"
+            required
+            name="firstname"
             class="bg-[#80808013] border h-12 px-4"
             style="border-color: rgba(128, 128, 128, 0.834)"
           />
@@ -56,6 +59,8 @@
 
           <input
             type="text"
+            required
+            name="lastname"
             class="bg-[#80808013] border h-12 px-4"
             style="border-color: rgba(128, 128, 128, 0.834)"
           />
@@ -74,7 +79,9 @@
         </div>
 
         <input
-          type="text"
+          type="email"
+          name="email"
+          required
           class="bg-[#80808013] border h-12 px-4"
           style="border-color: rgba(128, 128, 128, 0.834)"
         />
@@ -87,13 +94,14 @@
         </div>
 
         <textarea
-          name=""
+          name="message"
           id=""
           class="bg-[#80808013] border h-36 px-2 py-2"
           style="border-color: rgba(128, 128, 128, 0.834)"
         ></textarea>
       </div>
       <button
+        type="submit"
         class="w-52 h-14 mt-4 font-semibold text-lg bg-accent text-secondary"
       >
         SUBMIT
