--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,3 +1,4 @@
+<!-- landing page service -->
 <section
   class="w-screen px-10 md:px-40 h-screen flex flex-col justify-center items-start"
   id="main1"
@@ -10,6 +11,115 @@
   </h1>
 </section>
 
+<section class="w-full bg-[white] mt-40 z-0">
+  <div class="w-[80%] mx-auto flex flex-col justify-center items-center">
+    <h1 class="text-3xl md:text-7xl font-extrabold text-primary">What We Do</h1>
+    <hr class="bg-accent text-accent h-2 w-[80px] mt-8 mb-8" />
+    <p class="text-[gray] text-xl w-full md:w-[50%] leading-loose">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+    </p>
+    <div class="w-full flex flex-wrap flex-row py-12 z-0 gap-14 justify-center">
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-01-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          General Contract
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-02-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          Project Planning
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-03-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          House Refurbishment
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-04-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          Kitchen Remodeling
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-05-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          Interior Design
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+      <div class="w-[400px] flex flex-col gap-4 z-0">
+        <img
+          src="../../assets/images/services/services-06-free-img.jpg"
+          alt=""
+        />
+        <h1 class="text-primary text-3xl font-extrabold z-10">
+          House Extension
+        </h1>
+        <div id="underLine" class="w-[100%] h-[40px] z-0"></div>
+        <p
+          class="text-[#808080c7] text-xl leading-loose text-justify relative top-[-5%]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- form -->
 <section
   class="w-full h-full flex flex-col md:flex-row gap-16 justify-center items-center pt-16"
   id="main2"
@@ -109,6 +219,7 @@
     </form>
   </div>
 </section>
+<!-- footer -->
 <footer class="w-full bg-primary">
   <section class="w-full bg-[#071C4A] h-[1240px] lg:h-[640px] top-[-420px]">
     <section
